# spdw

./: .gitignore  LICENSE  README.md  bun.lockb  package.json  pyproject.toml  sel.db  sel_telemetry.py  speed_model.py  telemetry.py  test_sel_telemetry.py  test_telemetry.py
.github/workflows/: db.yml  main.yml  past-schedule.yml  schedule.yml  sel.yml  sel2.yml  sel_data.yml  sel_db.yml  test-workflow.yml
data/: schedules.jsonl
data/sel/: matches.jsonl  schedules.jsonl
data/sel/2007/: schedule.html  schedule.json
data/sel/2008/: schedule.html  schedule.json
data/sel/2009/: schedule.html  schedule.json
data/sel/2010/: schedule.html  schedule.json
data/sel/2011/: schedule.html  schedule.json
data/sel/2012/: schedule.html  schedule.json
data/sel/2013/: schedule.html  schedule.json
data/sel/2014/: schedule.html  schedule.json
data/sel/2015/: schedule.html  schedule.json
data/sel/2016/: schedule.html  schedule.json
data/sel/2022/: schedule  (+2 more)
queries/: postgres.sql  postgres_incremental.sql  postgres_indexes.sql  postgres_rls.sql  sel_init.sql  sel_stats.sql  test.sql
scripts/: changes.sh  commit.sh  data_collect.sh  data_commit.sh  match.sh  match_commit.sh  match_fetch.sh  match_process.sh  schedule.sh  schedule_changes.sh  schedule_commit.sh  schedule_fetch.sh  schedule_force_changes.sh  schedule_process.sh
sel/: schedules.jsonl
sel/2025/: schedule.html
src/: index.js  match.js  match.test.js  schedule.js  schedule.test.js  utils.js
tests/data/: 2843.json  3855.json  4804.json  4852.json  5520.json  5539.json  6560.json  stats_2025.json
(+2702 files in other folders)
