[project]
name = "spdw"
version = "0.1.0"
description = "spdw sel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "statsmodels>=0.14",
]

[dependency-groups]
dev = [
    "duckdb>=1.4.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
